[package]
name = "combined-log-parser"
version = "0.1.0"
description = ""
authors = ["Fawad Shaikh <fawad@vino.dev>"]
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vino-provider = { version = "0.9", features = ["wasm"] }
#combined log parsing lib
combined-log-parser = { version = "0.2.1", git="https://github.com/vinodotdev/combined-log-parser"}

[dev-dependencies]
