[package]
name = "text-log-parser"
version = "0.1.0"
description = ""
authors = ["Fawad Shaikh <fawad@vino.dev>"]
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = "z"

[lib]
crate-type = ["cdylib"]

[features]
default = ["host", "guest"]
host = []
guest = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
wasmflow-sdk = { version = "0.10.0", features = ["v1"] }
serde_json = "1.0"

#combined log parsing lib
text-log-parser = { version = "0.2.0", git="https://github.com/vinodotdev/text-log-parser"}

[dev-dependencies]
